--- a/src/main/resources/META-INF/resources/TetkikRapor.xhtml
+++ b/src/main/resources/META-INF/resources/TetkikRapor.xhtml
@@ -28,6 +28,7 @@
                 <p:menuitem value="Hasta Kabul" url="/HastaBasvuru.xhtml"/>
                 <p:menuitem value="Tetkik İstem" url="/HastaTetkikIstem.xhtml"/>
                 <p:menuitem value="Tetkik Kabul" url="./TetkikKabul.xhtml" includeViewParams="MR"/>
+                <p:menuitem value="Tetkik Rapor" url="./TetkikRapor.xhtml"/>
             </p:submenu>
             <p:submenu label="Randevu İşlemleri" icon="fa-calendar">
                 <p:menuitem value="Randevu Şablon" url="./RandevuSablon.xhtml" icon="fa-calendar"/>
@@ -43,15 +44,14 @@
 </h:head>
 
 <h:body>
-    <h:form id="FRMHastaBsvr">
+    <h:form id="FRMTtkrp">
         <div class="leftPanel">
             <h:panelGrid>
-                <p:dataTable id="hstBsvr" var="hasta" value="#{hastaBasvuruBean.hastaList}" selectionMode="single"
-                             selection="#{hastaBasvuruBean.selectedHasta}" rowKey="#{hasta.id}">
-                    <p:ajax event="rowDblselect" listener="#{hastaBasvuruBean.onDcRowSelect}"
-                            update=":FRMHastaBsvr:hstBsvrPg"/>
-                    <p:column headerText="Hasta Adı" filterBy="#{hasta.hastaAdi}"
-                              filterMatchMode="contains">
+                <p:dataTable id="hstTtk" var="hasta" value="#{tetkikRaporBean.hastaList}" selectionMode="single"
+                             selection="#{tetkikRaporBean.selectedHasta}" rowKey="#{hasta.id}">
+                    <p:ajax event="rowDblselect" listener="#{tetkikRaporBean.onDcRowSelect}"
+                            update=":FRMTtkrp:ttkRprPg"/>
+                    <p:column headerText="Hasta Adı">
                         <h:outputText value="#{hasta.hastaAdi}"/>
                     </p:column>
                     <p:column headerText="Hasta Soyadı">
@@ -70,7 +70,7 @@
             </h:panelGrid>
         </div>
         <div class="rightPanel">
-            <p:panelGrid id="hstBsvrPg" columns="4" layout="grid">
+            <p:panelGrid id="ttkRprPg" columns="4" layout="grid">
                 <p:outputLabel value="Hasta Adı"/>
                 <p:inputText id="ad" value="#{hastaBasvuruBean.hasta.hastaAdi}" disabled="true"/>
                 <p:outputLabel value="Hasta Soyadı"/>
@@ -78,56 +78,57 @@
 
                 <p:outputLabel value="Hasta Kimlik No"/>
                 <p:inputText id="kimlikNo" value="#{hastaBasvuruBean.hasta.hastaKimlikNo}" disabled="true"/>
-                <p:outputLabel value="Cinsiyet"/>
-                <p:inputText id="cinsiyet" value="#{hastaBasvuruBean.hasta.cinsiyet}" disabled="true"/>
-
                 <p:outputLabel value="Dogum Tarihi"/>
                 <p:calendar value="#{hastaBasvuruBean.hasta.dogumTarihi}" locale="tr" navigator="true"
                             showButtonPanel="true" pattern="dd.MM.yyyy" disabled="true"/>
                 <p:outputLabel value="Başvuru Numarası"/>
                 <p:inputText value="#{hastaBasvuruBean.hastaBasvuru.basvuruNo}" disabled="true"/>
 
-                <p:outputLabel value="Hasta Kurum"/>
-                <p:selectOneMenu id="hastaKurum" value="#{hastaBasvuruBean.hastaBasvuru.hastaKurum}">
-                    <f:selectItem itemLabel="Seçiniz" itemValue=""/>
-                    <f:selectItem itemLabel="SGK" itemValue="SGK"/>
-                    <f:selectItem itemLabel="Yeşil Kart" itemValue="Yeşil Kart"/>
-                    <f:selectItem itemLabel="Resmi Kurum" itemValue="Resmi Kurum"/>
-                </p:selectOneMenu>
-                <p:outputLabel value="Öncelik"/>
-                <p:selectOneMenu id="oncelik" value="#{hastaBasvuruBean.hastaBasvuru.oncelik}">
-                    <f:selectItem itemLabel="Seçiniz" itemValue=""/>
-                    <f:selectItem itemLabel="65 Yaş Üstü" itemValue="65_YAS_USTU"/>
-                    <f:selectItem itemLabel="Engelli" itemValue="ENGELLI"/>
-                </p:selectOneMenu>
-
-                <p:outputLabel value="Açılmama"/>
-                <p:inputTextarea value="#{hastaBasvuruBean.hastaBasvuru.aciklama}"/>
                 <p:outputLabel value="Birimi"/>
-                <h:selectOneMenu id="birim" value="#{hastaBasvuruBean.birim}" converter="#{listConverter}">
-                    <!--onchange="submit()" valueChangeListener="#{hastaBasvuruBean.selectOneMenuListener}"-->
-                    <f:selectItem itemLabel="Seçiniz-" itemValue="#{null}"/>
-                    <f:selectItems value="#{hastaBasvuruBean.birimList}" var="birim" itemValue="#{birim}"
-                                   itemLabel="#{birim.birimAdi}"/>
-                </h:selectOneMenu>
+                <p:inputText value="#{tetkikIstemBean.hastaBasvuruDetay.birim}" disabled="true"/>
 
                 <p:outputLabel value="Personel"/>
-                <h:selectOneMenu id="personel" value="#{hastaBasvuruBean.personel}"
+                <p:inputText value="#{tetkikIstemBean.hastaBasvuruDetay.personel}" disabled="true"/>
+
+                <p:outputLabel value="Tetkik"/>
+                <p:selectOneMenu id="tetkik" value="#{tetkikIstemBean.tetkik}"
                                  converter="#{listConverter}">
                     <f:selectItem itemLabel="Seçiniz" itemValue="#{null}"/>
-                    <f:selectItems value="#{hastaBasvuruBean.personelList}" var="personel"
-                                   itemValue="#{personel}"
-                                   itemLabel="#{personel.personelAdi} #{personel.personelSoyadi}"/>
-                </h:selectOneMenu>
-                <p:outputLabel/>
-                <p:outputLabel/>
+                    <f:selectItems value="#{tetkikIstemBean.tetkikList}" var="tetkik"
+                                   itemValue="#{tetkik}"
+                                   itemLabel="#{tetkik.tetkikAdi}"/>
+                </p:selectOneMenu>
 
-                <p:commandButton value="Kaydet" actionListener="#{hastaBasvuruBean.save()}" ajax="false"
-                                 icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
-                <p:commandButton value="Sil" actionListener="#{hastaBasvuruBean.delete()}" ajax="false"
-                                 icon="ui-icon-trash" style="left: 135px"/>
+                <!--<h3 style="margin-top:0">Sonuç</h3>-->
+                <!--<p:textEditor widgetVar="editor1" value="#{tetkikRaporBean.hastaTetkikRapor.sonuc}" height="150" style="margin-bottom:10px"/>-->
+<!--<p:outputLabel/>-->
+<!--<p:outputLabel/>-->
+<!--<p:outputLabel/>-->
+<!--<p:outputLabel/>-->
+<!--<p:outputLabel/>-->
+<!--<p:outputLabel/>-->
+
+                <!--<p:commandButton value="Kaydet" actionListener="#{tetkikRaporBean.save()}" ajax="false"-->
+                                 <!--icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>-->
+                <!--<p:commandButton value="Sil" actionListener="#{tetkikRaporBean.delete()}" ajax="false"-->
+                                 <!--icon="ui-icon-trash" style="left: 135px"/>-->
             </p:panelGrid>
         </div>
+        <div class="rightPanel">
+        <p:panelGrid id="snc" columns="1" layout="grid">
+
+            <h3 style="margin-top:0">Sonuç</h3>
+            <p:textEditor widgetVar="editor1" value="#{tetkikRaporBean.hastaTetkikRapor.sonuc}" height="150" style="margin-bottom:10px"/>
+            <p:outputLabel/>
+
+
+        </p:panelGrid>
+            <p:commandButton value="Kaydet" actionListener="#{tetkikRaporBean.save()}" ajax="false"
+                             icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+            <p:commandButton value="Sil" actionListener="#{tetkikRaporBean.delete()}" ajax="false"
+                             icon="ui-icon-trash" style="left: 135px"/>
+        </div>
+
     </h:form>
 </h:body>
 </html>
