--- a/src/main/resources/META-INF/resources/home.xhtml
+++ b/src/main/resources/META-INF/resources/home.xhtml
@@ -29,6 +29,7 @@
                 <p:menuitem value="Hasta Kabul" url="/HastaBasvuru.xhtml"/>
                 <p:menuitem value="Tetkik İstem" url="/HastaTetkikIstem.xhtml"/>
                 <p:menuitem value="Tetkik Kabul" url="/TetkikKabul.xhtml" includeViewParams="MR"/>
+                <p:menuitem value="Tetkik Rapor" url="./TetkikRapor.xhtml"/>
             </p:submenu>
             <p:submenu label="Randevu İşlemleri" icon="ui-icon-calendar">
                 <p:menuitem value="Randevu Şablon" url="/RandevuSablon.xhtml" icon="ui-icon-calendar"/>
