--- a/src/main/resources/META-INF/resources/RandevuSablon.xhtml
+++ b/src/main/resources/META-INF/resources/RandevuSablon.xhtml
@@ -57,17 +57,10 @@
                     <p:column headerText="Şablon Bitiş Saati">
                         <h:outputText value="#{randevuSablon.saatBitis}"/>
                     </p:column>
-                    <p:column headerText="Salon Adı">
-                        <h:outputText value="#{randevuSablon.salon.salonAdi}"/>
-                    </p:column>
-                    <p:column headerText="Cihaz Adı">
-                        <p:calendar value="#{randevuSablon.cihaz.adi}" pattern="dd.MM.yyyy"/>
-                    </p:column>
                 </p:dataTable>
             </h:panelGrid>
         </div>
         <div class="rightPanel">
-            <!--<h:panelGrid id="hstBsvrPg" style="margin: 0 auto">-->
             <p:panelGrid id="sblnPg" columns="4" layout="grid">
                 <p:outputLabel value="Şablon Aktif Mi"/>
                 <p:selectBooleanCheckbox id="durum" value="#{randevuSablonBean.randevuSablon.durum}" required="true"
@@ -94,18 +87,17 @@
                 <p:inputText value="#{randevuSablonBean.randevuSablon.randevuSuresi}" required="true"
                              requiredMessage="Randevu Süresini Giriniz!!"/>
                 <p:outputLabel value="Salon"/>
-                <h:selectOneMenu id="salon" value="#{randevuSablonBean.salon}" converter="#{listConverter}">
+                <h:selectOneMenu id="salon" value="#{randevuSablonBean.salon}" >
                     <f:selectItem itemLabel="Salon Seçiniz" itemValue="#{null}"/>
                     <f:selectItems value="#{randevuSablonBean.salonList}" var="salon" itemValue="#{salon}"
                                    itemLabel="#{salon.salonAdi}"/>
                 </h:selectOneMenu>
 
                 <p:outputLabel value="Cihaz"/>
-                <h:selectOneMenu id="cihaz" value="#{randevuSablonBean.cihaz}" converter="#{listConverter}">
+                <h:selectOneMenu id="cihaz" value="#{randevuSablonBean.cihaz}" >
                     <f:selectItem itemLabel="Cihaz Seçiniz" itemValue="#{null}"/>
                     <f:selectItems value="#{randevuSablonBean.cihazList}" var="cihaz" itemValue="#{cihaz}"
                                    itemLabel="#{cihaz.adi}"/>
-                    <p:ajax update=":FRMRandSabln:sblnPg" listener="#{randevuSablonBean.cihaz}"/>
                 </h:selectOneMenu>
                 <p:outputLabel/>
                 <p:outputLabel/>
